2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: fix typo

2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: begin of extension to step and in-law
	NOT finished.

2007-10-26 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: change api get_singular, add docu string
	* src/plugins/all_relations.py: call get_singular changed.

2007-10-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: display date on text report in locale;
	changed a font default; removed string date class: use offset instead

2007-10-26 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_nl.py: merge in changes of branch22
	* src/DisplayState.py: method to set rel class
	* src/ViewManager.py: call set rel class after loading plugins

2007-10-25 Gary Burton <gary.burton@zen.co.uk>
	* src/GrampsWidgets.py: allow MonitoredEntry widgets to be updated with
	empty strings. issue #1314

2007-10-25 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/lineage.py: gen variable conflicts with module gen

2007-10-25 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: don't import RelLib

2007-10-24 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins.py/rel_xx.py: return order of get_relationship_distance
	changed. Not for pl, there that method is inherited.

2007-10-24 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: collapse parents same family in one line
	* src/Relationship.py: change no parent family code

2007-10-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: internationalization of a string

2007-10-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/RelCalc.py: better comment, issue #1181

2007-10-23 Benny Malengier <benny.malengier@gramps-project.org>