@@ -255,7 +255,7 @@ class PeopleModel(gtk.GenericTreeModel):
         gtk.GenericTreeModel.__init__(self)
 
         self.db = db
-	self.in_build = False
+        self.in_build = False
 
         Config.client.notify_add("/apps/gramps/preferences/todo-color",
                                  self.update_todo)
@@ -384,7 +384,7 @@ class PeopleModel(gtk.GenericTreeModel):
         """
         Calculates the new path to node values for the model.
         """
-	self.in_build  = True
+        self.in_build  = True
         self.lru_data  = LRU(_CACHE_SIZE)
         self.lru_name  = LRU(_CACHE_SIZE)
         self.lru_bdate = LRU(_CACHE_SIZE)
@@ -405,7 +405,7 @@ class PeopleModel(gtk.GenericTreeModel):
 
         self.mapper.build_toplevel()
 
-	self.in_build  = False
+        self.in_build  = False
 
     def clear_cache(self):
         self.lru_data  = LRU(_CACHE_SIZE)
@@ -457,16 +457,13 @@ class PeopleModel(gtk.GenericTreeModel):
             # return values for 'data' row, calling a function
             # according to column_defs table
             try:
-                if col == 0:
-                    return self.mapper.sortnames[node]
                 try:
                     data = self.lru_data[node]
                 except:
                     data = self.db.get_raw_person_data(str(node))
-		    if not self.in_build:
-			self.lru_data[node] = data
-                return PeopleModel.COLUMN_DEFS[col][PeopleModel.COLUMN_DEF_LIST](self,
-                                                                                 data, node)
+                    if not self.in_build:
+                        self.lru_data[node] = data
+                return PeopleModel.COLUMN_DEFS[col][PeopleModel.COLUMN_DEF_LIST](self, data, node)
             except:
                 return None
 
@@ -515,12 +512,12 @@ class PeopleModel(gtk.GenericTreeModel):
         return spouses_names
 
     def column_name(self, data, node):
-	try:
-	    name = self.lru_name[node]
-	except:
-	    name = name_displayer.raw_sorted_name(data[PeopleModel._NAME_COL])
-	    if not self.in_build:
-		self.lru_name[node] = name
+        try:
+            name = self.lru_name[node]
+        except:
+            name = name_displayer.raw_sorted_name(data[PeopleModel._NAME_COL])
+            if not self.in_build:
+                self.lru_name[node] = name
         return name
 
     def column_id(self, data, node):
@@ -536,12 +533,12 @@ class PeopleModel(gtk.GenericTreeModel):
         return PeopleModel._GENDER[data[PeopleModel._GENDER_COL]]
 
     def column_birth_day(self, data, node):
-	try:
-	    value = self.lru_bdate[node]
-	except:
-	    value = self._get_birth_data(data,node)
-	    if not self.in_build:
-		self.lru_bdate[node] = value
+        try:
+            value = self.lru_bdate[node]
+        except:
+            value = self._get_birth_data(data,node)
+            if not self.in_build:
+                self.lru_bdate[node] = value
         return value
 
     def _get_birth_data(self, data, node):
@@ -572,12 +569,12 @@ class PeopleModel(gtk.GenericTreeModel):
         return u""
 
     def column_death_day(self, data, node):
-	try:
-	    value = self.lru_ddate[node]
-	except:
-	    value = self._get_death_data(data,node)
-	    if not self.in_build:
-		self.lru_ddate[node] = value
+        try:
+            value = self.lru_ddate[node]
+        except:
+            value = self._get_death_data(data,node)
+            if not self.in_build:
+                self.lru_ddate[node] = value
         return value
 
     def _get_death_data(self, data, node):
