@@ -1,3 +1,8 @@
+2007-10-28 Gary Burton <gary.burton@zen.co.uk>
+	* src/DisplayModels/_PeopleModel.py: removed a performance change added
+	in revision 8734. This was causing issues #1322 & #1324
+	Also replaced tab indentation with spaces
+
 2007-10-27 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/Relationship.py: fix typo
 
